--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>force-cloud</module>
         <module>force-boot-starter</module>
         <module>force-core</module>
+        <module>force-dependencies</module>
     </modules>
 
     <properties>
