--- a/force-boot-starter/force-boot-commons/pom.xml
+++ b/force-boot-starter/force-boot-commons/pom.xml
@@ -10,6 +10,7 @@
     </parent>
 
     <artifactId>force-boot-commons</artifactId>
+    <name>${project.artifactId}</name>
     <description>Spring Boot 通用依赖</description>
 
     <dependencies>
