--- a/force-core/force-tools/pom.xml
+++ b/force-core/force-tools/pom.xml
@@ -18,6 +18,9 @@
         <slf4j.version>1.7.30</slf4j.version>
         <jackson.version>2.10.5</jackson.version>
         <guava.version>30.1.1-jre</guava.version>
+        <jasypt.version>1.9.3</jasypt.version>
+        <hutool.version>5.7.3</hutool.version>
+        <jakarta.version>3.0.2</jakarta.version>
     </properties>
 
     <dependencies>
@@ -50,16 +53,24 @@
             <version>${guava.version}</version>
             <scope>compile</scope>
         </dependency>
+        <!-- Jasypt 加密 -->
         <dependency>
             <groupId>org.jasypt</groupId>
             <artifactId>jasypt</artifactId>
-            <version>1.9.3</version>
+            <version>${jasypt.version}</version>
             <scope>compile</scope>
         </dependency>
+        <!-- HuTool 工具 -->
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
-            <version>5.7.3</version>
+            <version>${hutool.version}</version>
+        </dependency>
+        <!-- Jakarta -->
+        <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+            <version>${jakarta.version}</version>
         </dependency>
 
     </dependencies>
