--- a/force-boot-starter/force-boot-application/pom.xml
+++ b/force-boot-starter/force-boot-application/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.quan</groupId>
         <artifactId>force-boot-starter</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
 
     <artifactId>force-boot-application</artifactId>
@@ -18,20 +18,27 @@
     </properties>
 
     <dependencies>
+        <!-- Web服务基础工具 -->
         <dependency>
             <groupId>com.quan</groupId>
             <artifactId>force-mvc-starter</artifactId>
             <version>${revision}</version>
         </dependency>
+        <!-- 锁相关实现 -->
+        <dependency>
+            <groupId>com.quan</groupId>
+            <artifactId>force-lock-starter</artifactId>
+            <version>${revision}</version>
+        </dependency>
+        <!-- Web服务 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <!-- Spring 测试自动配置 -->
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>3.8.1</version>
-            <scope>test</scope>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
     </dependencies>
 </project>
