--- a/force-spring-framework/force-redis/pom.xml
+++ b/force-spring-framework/force-redis/pom.xml
@@ -31,6 +31,10 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.quan</groupId>
+            <artifactId>force-tools</artifactId>
+        </dependency>
 
     </dependencies>
 
