--- a/force-spring-framework/force-demo/pom.xml
+++ b/force-spring-framework/force-demo/pom.xml
@@ -104,6 +104,12 @@
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-context</artifactId>
+            <version>3.1.8</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
