--- a/force-spring-framework/force-demo/pom.xml
+++ b/force-spring-framework/force-demo/pom.xml
@@ -110,6 +110,12 @@
             <version>3.1.8</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mvel</groupId>
+            <artifactId>mvel2</artifactId>
+            <version>2.4.12.Final</version>
+        </dependency>
+
 
     </dependencies>
 
